--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,8 @@
 apply plugin: 'com.android.application'
-
 apply plugin: 'kotlin-android'
-
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
+apply plugin: 'org.jetbrains.kotlin.android.extensions'
 
 android {
     compileSdkVersion 27
@@ -47,8 +47,10 @@ dependencies {
     implementation "com.andkulikov:transitionseverywhere:1.7.9"
 
     //Database
+    androidTestImplementation 'android.arch.core:core-testing:1.1.1'
+    kapt "android.arch.persistence.room:compiler:1.1.0"
     implementation "android.arch.persistence.room:runtime:1.1.1-rc1"
     implementation "android.arch.persistence.room:rxjava2:1.1.0"
-    implementation "io.reactivex.rxjava2:rxandroid:2.0.2"
+    debugImplementation 'com.amitshekhar.android:debug-db:1.0.3'
 }
 apply plugin: 'com.google.gms.google-services'
