--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,7 +27,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:27.1.1'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
@@ -37,12 +37,15 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:15.0.0'
     // Anim
     implementation "com.andkulikov:transitionseverywhere:1.7.9"
-
     //Database
     androidTestImplementation 'android.arch.core:core-testing:1.1.1'
-    kapt "android.arch.persistence.room:compiler:1.1.0"
-    implementation "android.arch.persistence.room:runtime:1.1.1-rc1"
+    kapt "android.arch.persistence.room:compiler:1.1.1"
+    implementation "android.arch.persistence.room:runtime:1.1.1"
     implementation "android.arch.persistence.room:rxjava2:1.1.0"
     debugImplementation 'com.amitshekhar.android:debug-db:1.0.3'
+    // RxJava
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.9'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    implementation 'io.reactivex.rxjava2:rxkotlin:2.0.3'
 }
 apply plugin: 'com.google.gms.google-services'
